linux-base (4.1) UNRELEASED; urgency=medium

  * Adjust for migration to git:
    - Add .gitignore files
    - debian/control: Update Vcs-* fields (Closes: #824748)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 11 Aug 2015 19:12:59 +0200

linux-base (4.0) unstable; urgency=low

  * Remove obsolete postinst upgrade code and translations
    (Closes: #580435, #660670, #670775, #686211, #686384, #686431, #686445,
     #686459, #686480, #686602, #686610, #686662, #686687, #686704, #686705,
     #686717, #686720, #686748, #698203)
  * Run version_cmp() unit tests at build time
  * linux-version: Fix sorting of version strings containing -trunk
    (Closes: #761614)
  * perf: Update error message for missing perf executable, to refer to
    linux-perf-<version> for Linux 4.1 onward
  * debian/control: Drop support for pre-multiarch releases
  * debian/control: Update Vcs-* fields to use anonscm.debian.org
  * debian/control: Update policy version to 3.9.6; no changes required

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 04 Aug 2015 21:24:05 +0100

linux-base (3.5) unstable; urgency=low

  * debian/control: Set Multi-Arch: foreign to allow for installation
    of foreign linux-image packages

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Mar 2012 15:21:57 +0000

linux-base (3.4) unstable; urgency=low

  * perf: Fix lookup of the real command and package names for official
    packages of Linux 3.1 onward and for custom kernels with stable
    updates

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Nov 2011 05:42:35 +0000

linux-base (3.3) unstable; urgency=low

  * debian/control: Fix VCS URLs (Closes: #620609)
  * Update debconf template translations:
    - Slovak (Slavko) (Closes: #622118)
    - Dutch (Jeroen Schot) (Closes: #629389)
  * linux-version: Fix interpolation of command name in help, thanks to
    Jakub Wilk (Closes: #624795)
  * debian/postinst: Fix warning produced when checking a device that